2007-11-19  Julien MOUTTE  <julien@moutte.net>

	* docs/faq/gst-uninstalled: Add new base libraries in the LD 
	search path.

2007-11-19  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstpreset.c:
	  Fix bogus warning and make the property type specific code more
	  similar.

2007-11-19  Julien MOUTTE  <julien@moutte.net>

	* gst/gstpreset.c: (gst_preset_default_create_preset): Make
	it build on OS X.

2007-11-19  Wim Taymans  <wim.taymans@gmail.com>

	* gst/gstbin.c: (gst_bin_class_init), (gst_bin_init),
	(gst_bin_add_func), (gst_bin_remove_func),
	(gst_bin_change_state_func), (gst_bin_continue_func):
	Change email, cleanups add some more debug and comments.
	Also set bus and clock on new elements when the pipeline was in error.

2007-11-18  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstbin.c:
	* gst/gstdebugutils.c:
	  Fix build with --disable-gst-debug. Fixes #497859.
	  Spotted by Sameer Naik.

2007-11-17  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstevent.c:
	  Little documentation improvment.

	* gst/gstpreset.c:
	  More TODO cleanups. Remove c++ comments.

	* libs/gst/controller/gstcontroller.c:
	  Add TODO and use quark from static string.

	* tests/check/gst/gstmessage.c:
	* tests/check/gst/gststructure.c:
	  Use quark from static string.

2007-11-17  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstpreset.c:
	  Add some comments and TODOs.

	* gst/gstpreset.h:
	  Add padding for future changes.

	* plugins/elements/gstqueue.c:
	  Implement the iface.	  

2007-11-17  Stefan Kost  <ensonic@users.sf.net>

	* docs/gst/gstreamer-docs.sgml:
	* docs/gst/gstreamer-sections.txt:
	* docs/gst/gstreamer.types.in:
	* gst/Makefile.am:
	* gst/gst.h:
	* gst/gstpreset.c:
	* gst/gstpreset.h:
	  Add the preset interface (Fixes #396779). Do some doc cleanups along.

2007-11-16  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:

	Back to CVS

=== release 0.10.15 ===

2007-11-15  Jan Schmidt <jan.schmidt@sun.com>

	* configure.ac:
	  releasing 0.10.15, "October"
