@@ -1,3 +1,8 @@
+2007-11-19  Stefan Kost  <ensonic@users.sf.net>
+
+	* gst/gstpreset.c:
+	  More cleanups, docs, and TODOs from comments that now slowly come in.
+
 2007-11-19  Julien MOUTTE  <julien@moutte.net>
 
 	* docs/faq/gst-uninstalled: Add new base libraries in the LD 
